# resources/views/pages/plp.blade.php
@@ -11,22 +11,15 @@
                     <div class="shop-widget widget-shop-publishers mt-3">
                         <div class="product-filter">
                             <h6 class="mb-20">Type</h6>
-                            <select class="_filter form-select form-select-sm" name="_publisher" onchange="getData()">
+                            <select class="_filter form-select form-select-sm" name="_nation" onchange="getData()">
                                 <option value="" selected>All</option>
-                                <option value="putnam">Putnam</option>
-                                <option value="harriman house">Harriman House</option>
-                                <option value="balai pustaka">Balai Pustaka</option>
-                                <option value="Lentera dipantara">Lentera Dipantara</option>
-                                <option value="pan books">Pan Books</option>
-                                <option value="firefly books">Firefly Books</option>
-                                <option value="gramedia">Gramedia</option>
-                                <option value="scholastic">Scholastic</option>
-                                <option value="harper">Harper</option>
-                                <option value="dk children">DK Children</option>
-                                <option value="bentang pustaka">Bentang Pustaka</option>
-                                <option value="gagas media">Gagas Media</option>
-                                <option value="grasindo">Grasindo</option>
-                                <option value="Marjin Kiri">Marjin Kiri</option>
+                                <option value="bmc">BMC Bikes</option>
+                                <option value="bombtrack">Bombtrack Bikes</option>
+                                <option value="cannondale">Cannondale Bikes</option>
+                                <option value="cube">CUBE Bikes</option>
+                                <option value="parapera">Parapera Bikes</option>
+                                <option value="rennstahl">Rennstahl Bikes</option>
+                                <option value="specialized">Specialized Bikes</option>
                             </select>
                         </div>
                     </div>
@@ -49,10 +42,10 @@
                         <div class="product-filter widget-price">
                             <h6 class="mb-20">Price</h6>
                             <ul class="widget-nav-list">
-                                <li><a href="#">Under IDR 100K</a></li>
-                                <li><a href="#">IDR 100-500K</a></li>
-                                <li><a href="#">IDR 501-1000K</a></li>
-                                <li><a href="#">Above IDR 1000K</a></li>
+                                <li><a href="#">Under IDR 1M</a></li>
+                                <li><a href="#">IDR 1-10M</a></li>
+                                <li><a href="#">IDR 10-50M</a></li>
+                                <li><a href="#">Above IDR 50M</a></li>
                             </ul>
                         </div>
                     </div>
@@ -62,24 +55,19 @@
                         <div class="product-filter">
                             <h6 class="mb-20">Tags</h6>
                             <div class="blog-tagcloud">
-                                <a href="#" class="selected">Book</a>
-                                <a href="#">E-Book</a>
-                                <a href="#">Best Seller</a>
-                                <a href="#">Fiction</a>
-                                <a href="#">Education</a>
-                                <a href="#">Literature</a>
-                                <a href="#">Classics</a>
-                                <a href="#">Real Event</a>
-                                <a href="#">Young Adult</a>
-                                <a href="#">Religion</a>
-                                <a href="#">Health</a>
-                                <a href="#">Comic</a>
-                                <a href="#">Horror</a>
-                                <a href="#">Poem</a>
-                                <a href="#">Filmed</a>
-                                <a href="#">Encyclopedia</a>
-                                <a href="#">In English</a>
-                                <a href="#">In Indonesian</a>
+                                <a href="#" class="selected">Bicycle</a>
+                                <a href="#">BMX</a>
+                                <a href="#">City Bikes</a>
+                                <a href="#">Hybrid Bikes</a>
+                                <a href="#">Cyclocross Bikes</a>
+                                <a href="#">Fitness Bikes</a>
+                                <a href="#">Gravel Bikes</a>
+                                <a href="#">Kids Bikes</a>
+                                <a href="#">Mountain Bikes</a>
+                                <a href="#">Road Bikes</a>
+                                <a href="#">Randonneur Bikes</a>
+                                <a href="#">Touring Bikes</a>
+                                <a href="#">Triathlon Bikes</a>
                             </div>
                         </div>
                     </div>
@@ -111,7 +99,7 @@
                                 <div class="header-search-box">
                                     <input  class="_filter search-field" name="_search" type="text" 
                                             onkeypress="getDataOnEnter(event)"
-                                            placeholder="Search by title or author...">
+                                            placeholder="Search by model or manufacturer...">
                                     <button class="search-icon"><i class="icon-magnifier"></i></button>
                                 </div>
                             </div>
